src/main/resources/static/css/games.css
/* ... */
.nav .prev, .nav .prev2{
    left: -1vw;
    display: none;
}

.nav .prev img, .nav .prev2 img{
    height: 10vw;
    width: auto;
    position: absolute;
    margin-left: -5vw;
    margin-top: -5vw;
    max-width: none;
    transform: rotate(180deg);
}
.nav .prev.show, .nav .prev2.show{
    display: block;
}
.nav .next, .nav .next2 {
    right: -0.443vw;
    /*background-image: url('/public/Icons/next.png');*/
}
.nav .next img, .nav .next2 img {
    height: 10vw;
    width: auto;
    position: absolute;
    margin-left: -5vw;
    margin-top: -5vw;
    max-width: none;
}
.nav .next.hide, .nav .next2.hide {
    visibility: hidden;
}
.my-games{

    height: 17vw;
    width: 70vw;
    margin-top: -18vw;
    margin-left: 20vw;
    position: absolute;

    display: flex;
}


.game{
    border: 0.3vw solid #5cfd42;
    margin-right: 0.5vw;
    background-size: cover;
    background-position: center;
    height: 100%;
    width: 16.67vw;
}

.buttons-div{
    margin-top: 14.5vw;

}
#add-games-container{
    padding: 4vw;
    width: 90vw;
    height: 29vw;
    margin: 2vw auto;
    border: 0.3vw;
    display: flex;
    justify-content: center;
}
#add-games-container p {
    font-size: 1.25vw;
    position: absolute;
    margin-top: 4vw;
    width: 66vw;
    display: flex;
    justify-content: center;
}
#search-bar{
    border: solid #5cfd42 0.3vw;
    height: 3.5vw;
    position: absolute;
}
#game-search-input{
    width: 66vw;
    height: 3vw;
    background-color: #333333;
    color: #5cfd42;

}
#game-search-button{
    width: 3vw;
    height: 3vw;
    cursor: pointer;
}
.my-games2{

    height: 17vw;
    width: 70vw;
    margin-top: 0vw;
    margin-left: 20vw;
    position: absolute;

    display: flex;
}

#games-call-to-action {

}

.rainbow {
    animation: colorRotate 20s linear 0s infinite;
}

@keyframes colorRotate {
    from {
        border-color: #ff0000;
        box-shadow: 0px 0px 20px 10px #ff0000;
    }
    12.5% {
        /*border-color: #0099ff;*/
        border-color: #ff8000;
        box-shadow: 0px 0px 20px 10px #ff8000;
    }
    25% {
        /*border-color: #0099ff;*/
        border-color: #ffea00;
        box-shadow: 0px 0px 20px 10px #ffea00;
    }
    37.5% {
        border-color: #37ff00;
        box-shadow: 0px 0px 20px 10px #37ff00;
    }
    50% {
        border-color: #00fff7;
        box-shadow: 0px 0px 20px 10px #00fff7;
    }
    65.5% {
        border-color: #0077ff;
        box-shadow: 0px 0px 20px 10px #0077ff;
    }
    75% {
        border-color: #8251ff;
        box-shadow: 0px 0px 20px 10px #8251ff;
    }
    87.5% {
        border-color: #e600ff;
        box-shadow: 0px 0px 20px 10px #e600ff;
    }
    100% {
        border-color: #ff0000;
        box-shadow: 0px 0px 20px 10px #ff0000;
    }
}

.span1 {
    margin-top: 3vw;
    margin-left: 4vw;
    color: #5cfd42;
    font-size: 1.5vw;
}

.span2 {
    margin-top: 3vw;
    margin-left: 10vw;
    color: #5cfd42;
    font-size: 1.5vw;
}

.load-gif {
    position: absolute;
    margin-top: -20vw;
    margin-left: 36vw;
}

.none {
    display: none;
}
.block {
    display: block;
}

.filter-words {
    width: 40%;
    margin: auto;
}
/* ... */

